[Fix] JavaDocs and Deprecation - Renamed text to textContent in Text - Added deprecated java docs for Text#list - Deprecated Item#clone in favor of a clone constructor: Item#Item(Item item)